src/objects/Funding_Service__c.object
<CustomObject>
    <description>Represents the Services associated with a Plan</description>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF( Funding_End__c &gt;  TODAY(), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CareLinkID__c</fullName>
        <externalId>true</externalId>
        <label>CareLinkID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carelink_Service__c</fullName>
        <label>Carelink Service</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charges_Rostered__c</fullName>
        <label>Charges Rostered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Funding_Body__c</fullName>
        <label>Funding Body</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Funding_Body</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_End__c</fullName>
        <label>Funding End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_ID__c</fullName>
        <externalId>true</externalId>
        <label>Funding ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Period_Progress__c</fullName>
        <formula>IF(
Funding_Start__c &gt; TODAY() ,0,IF(Funding_End__c &lt; TODAY(),1, (TODAY() - Funding_Start__c) / (Funding_End__c - Funding_Start__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Period Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Funding_Start__c</fullName>
        <label>Funding Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <label>Funding</label>
        <referenceTo>Funding__c</referenceTo>
        <relationshipLabel>Funding Services</relationshipLabel>
        <relationshipName>Plan_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hours_Indicator__c</fullName>
        <formula>IMAGE(IF(Hours_Utilisation__c &gt; 1, &quot;/resource/Vertic_Images/cancel.png&quot;, &quot;/resource/Vertic_Images/checked.png&quot;),&quot;&quot;)
+ IF(Hours_Utilisation__c &gt; 1, &apos; - Over Budget&apos;, &apos; - Under Budget&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Purchased__c</fullName>
        <label>Hours Purchased</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Remaining__c</fullName>
        <formula>Hours_Purchased__c  -  Hours_Rostered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Hours Purchased less the Hours Used</inlineHelpText>
        <label>Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Rostered__c</fullName>
        <label>Hours Rostered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Utilisation__c</fullName>
        <formula>Hours_Rostered__c /  Hours_Purchased__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Utilisation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Kms_Indicator__c</fullName>
        <formula>IMAGE(IF(Kms_Utilisation__c &gt; 1, &quot;/resource/Vertic_Images/cancel.png&quot;, &quot;/resource/Vertic_Images/checked.png&quot;),&quot;&quot;)
+ IF(Kms_Utilisation__c &gt; 1, &apos; - Over Budget&apos;, &apos; - Under Budget&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kms Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kms_Purchased__c</fullName>
        <label>Kms Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kms_Remaining__c</fullName>
        <formula>Kms_Purchased__c  -  Kms_Rostered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Kms Purchased less the Kms Used</inlineHelpText>
        <label>Kms Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kms_Rostered__c</fullName>
        <label>Kms Rostered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kms_Utilisation__c</fullName>
        <formula>Kms_Rostered__c / Kms_Purchased__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kms Utilisation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Funding Service</label>
    <nameField>
        <displayFormat>PSRV - {000000}</displayFormat>
        <label>Plan Service ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>